bad/assign_uop_bneg_null.example_compiler_output
ERROR
[1mbad/assign_uop_bneg_null.lat:4:9: [1;31merror: [0;1mleft side is not assignable[m
	!false = null;
	       [1;32m^[m
[1mbad/assign_uop_bneg_null.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	!false = null;
	[1;32m^[m
